# Methanol-Web-Crawler

./: AUTHORS  COPYING  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.ac
conf/: archive.conf  audio.conf  css.conf  default.conf  feed.conf  ftp.conf  google.conf  image.conf  meta.conf  mn-masterd.example.conf  mn-slaved.example.conf  source.conf  title.conf  validate.conf  video.conf  wikipedia.conf  xmlsource.conf  youtube.conf
doc/: methanol.texinfo
scripts/: google.js  html.js  misc.js  validate.js  wikipedia.js  youtube.js
src/: Makefile.am  Makefile.in  config.h  config.h.in
src/libmetha/: Makefile.am  Makefile.in  attr.c  attr.h  builtin.c  builtin.h  crawler.c  crawler.h  default.h  entityconv.c  errors.c  errors.h  events.c  events.h  filetype.c  filetype.h  filter.c  filter.h  ftindex.c  ftindex.h  ftpparse.c  html.c  io.c  io.h  js.c  js.h  lmopt.h  metha.c  metha.h  mime.c  mime.h  mod.c  mod.h  module.h  mtrie.c  mtrie.h  str.c  str.h  umex.c  umex.h  (+10 more)
src/libmetha/include/: metha.h
src/libmethaconfig/: Makefile.am  Makefile.in  conf.c  lmc.h  nolp.c  nolp.h
src/mb-client/: Makefile.am  Makefile.in  client.h  main.c  slave.c
src/metha-config/: Makefile.am  Makefile.in  main.c
src/methabot/: Makefile.am  Makefile.in  dump.c  help.c  main.c  methabot.h  sig.c
src/mn-masterd/: Makefile.am  Makefile.in  auth.c  client-class.c  client.h  conf.c  conf.h  conn.h  daemon.c  daemon.h  main.c  master.h  methanol.h  slave-class.c  slave-conn.c  slave.h  user-conn.c
src/mn-slaved/: Makefile.am  Makefile.in  client.c  client.h  hook.c  hook.h  main.c  master.c  slave.h
