
lib_LTLIBRARIES = \
	libmetha.la

libmetha_la_LDFLAGS = -version-info 0:0:0
libmetha_la_LIBADD = ../libmethaconfig/libmethaconfig.la

libmetha_la_SOURCES = \
	default.h    \
	filetype.c   \
	io.c		 \
	html.c	  \
	metha.c	 \
	url.c        \
	errors.c    \
	mime.c      \
	ftindex.c   \
	crawler.c   \
	urlengine.c \
	worker.c    \
	js.c        \
	utable.c    \
	mtrie.c     \
	umex.c      \
	builtin.c   \
	ftpparse.c  \
	events.c    \
	str.c       \
	mod.c       \
	filter.c    \
	mod.h       \
	str.h       \
	events.h    \
	umex.h      \
	utable.h    \
	crawler.h  \
	mime.h      \
	filetype.h   \
	io.h \
	metha.h   \
	ftindex.h   \
	urlengine.h \
	worker.h    \
	js.h        \
	mtrie.h     \
	builtin.h   \
	ftpparse.h  \
	attr.c \
	utf8conv.c \
	entityconv.c \
	filter.h

include_HEADERS = \
	errors.h	\
	include/metha.h \
	module.h    \
	lmopt.h  \
	url.h \
	attr.h \
	wfunction.h    \
	../config.h

AM_CFLAGS = -Wall -I../libmethaconfig/
